[package]
name = "ifwifi"
version = "1.0.0"
edition = "2018"
authors = ["Marcelo Araujo <araujobsdport@gmail.com>"]
license = "BSD"
description = "Wifi cli tool wrapper for nmcli"
readme = "README.md"
homepage = "https://github.com/araujobsd/ifwifi/"
repository = "https://github.com/araujobsd/ifwifi/"
keywords = ["cli", "wifi", "nmcli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "2.31.2", features = ["yaml"] }
wifi-rs = { version = "0.1.0" }
wifiscanner = "0.5.*"
prettytable-rs = "0.8.0"
colored = "2"
