[package]
name = "ifwifi"
version = "1.1.0"
edition = "2018"
authors = ["Marcelo Araujo <araujobsdport@gmail.com>"]
license = "BSD-2-Clause"
description = "A simple Wifi CLI wrapper over the long and tedious nmcli using wifiscanner"
readme = "README.md"
homepage = "https://github.com/araujobsd/ifwifi/"
repository = "https://github.com/araujobsd/ifwifi/"
keywords = ["cli", "wifi", "nmcli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
wifi-rs = { version = "0.2.2" }
wifiscanner = "0.5.*"
colored = "2"
